# ImGui.Net

./: .gitignore  .gitmodules  LICENSE  README.md  pipelines.md
.claude/: settings.json  settings.local.json
.github/actions/build-native/: action.yml
.github/actions/build-native-win/: action.yml
.github/actions/generate-bindings-nugets/: action.yml
.github/actions/publish-nugets/: action.yml
.github/actions/update-cimx/: action.yml
.github/workflows/: build-native-libs.yml  build-native-win.yml  build-native.yml  build.yml  cd-extensions.yml  cd-imgui.yml  cd.yml  ci-extensions.yml  ci-imgui.yml  ci.yml  cimgui-cmake.yml  cimguizmo-cmake.yml  cimnodes-cmake.yml  cimplot-cmake.yml  force_build-imgui.yml  force_build-imguizmo.yml  force_build-imnodes.yml  force_build-implot.yml  force_build.yml  generate-bindings.yml  sync-standards.yml  update-native.yml
Generator/: Generate-Bindings-Imgui.ps1  Generate-NuGets-Imgui.ps1  Generate-NuGets-Imguizmo.ps1  Generate-NuGets-Imnodes.ps1  Generate-NuGets-Implot.ps1  Generate-NuGets.ps1  Generator.sln  azure-pipelines.yml  ps_support.ps1
Generator/Common/: CSCodeWriter.cs  Common.projitems  Common.shproj  EnumDefinition.cs  FunctionsDefinition.cs  Helpers.cs  Specification.cs  StructDefinition.cs
Generator/Evergine.Bindings.Imgui/: Delegates.cs  Evergine.Bindings.Imgui.Reference.targets  Evergine.Bindings.Imgui.csproj  Evergine.Bindings.Imgui.dll.config  ImDrawList.cs  ImGuiStoragePair.cs  ImVector.cs  LibraryLoader.cs  Types.cs  Utf8StringArrayMarshaler.cs
Generator/Evergine.Bindings.Imgui/Imgui/: Enums.cs  Funtions.cs  Structs.cs
Generator/Evergine.Bindings.Imgui/Imguizmo/: Funtions.cs  Structs.cs
Generator/Evergine.Bindings.Imgui/Imnodes/: Enums.cs  Funtions.cs  Structs.cs
Generator/Evergine.Bindings.Imgui/Implot/: Enums.cs  Funtions.cs  Structs.cs
Generator/Evergine.Bindings.Imgui/runtimes/osx-arm64/native/: cimgui.dylib
Generator/Evergine.Bindings.Imgui/runtimes/osx-x64/native/: cimgui.dylib
Generator/Evergine.Bindings.Imguizmo/: Evergine.Bindings.Imguizmo.Reference.targets  Evergine.Bindings.Imguizmo.csproj  Evergine.Bindings.Imguizmo.dll.config  LibraryLoader.cs
Generator/Evergine.Bindings.Imnodes/: Evergine.Bindings.Imnodes.Reference.targets  Evergine.Bindings.Imnodes.csproj  Evergine.Bindings.Imnodes.dll.config  LibraryLoader.cs
Generator/Evergine.Bindings.Imnodes/Properties/: launchSettings.json
Generator/Evergine.Bindings.Imnodes/runtimes/osx-arm64/native/: cimnodes.dylib
Generator/Evergine.Bindings.Imnodes/runtimes/osx-x64/native/: cimnodes.dylib
Generator/Evergine.Bindings.Implot/: Evergine.Bindings.Implot.Reference.targets  Evergine.Bindings.Implot.csproj  Evergine.Bindings.Implot.dll.config  LibraryLoader.cs
Generator/Example/: .gitignore  Evergine.config  ExampleEvergine.Windows.sln  ExampleEvergine.weproj  README.md
Generator/Example/Content/: Scenes.wedir
Generator/Example/Content/Scenes/: MyScene.wescene  MyScene.wescene.wesc
Generator/Example/Content/Scenes/MyScene/Environment/SceneReflectionProbe/: Irradiance.texdmp  Radiance.texdmp
Generator/Example/ExampleEvergine/: ExampleEvergine.csproj  MyApplication.cs  MyScene.cs
Generator/Example/ExampleEvergine.Editor/: ExampleEvergine.Editor.csproj  MyCustomClassEditor.cs
Generator/Example/ExampleEvergine.Windows/: ExampleEvergine.Windows.csproj  Program.cs
Generator/Example/ExampleEvergine.Windows/Properties/: launchSettings.json
Generator/Example/ExampleEvergine/Components/: ImguiDemo.cs  ImguizmoDemo.cs  ImnodesDemo.cs
Generator/Example/ExampleEvergine/Managers/: ImGUIHelpers.cs  ImGuiManager.cs  Shaders.cs
Generator/ImguiGen/: ImguiGen.csproj  JsonClasses.cs  Program.cs
Generator/ImguiGen/Jsons/: definitions.json  impl_definitions.json  structs_and_enums.json  typedefs_dict.json
Generator/ImguizmoGen/: ImguizmoGen.csproj  Program.cs
Generator/ImguizmoGen/Jsons/: definitions.json  structs_and_enums.json
Generator/ImnodesGen/: ImnodesGen.csproj  Program.cs
Generator/ImnodesGen/Jsons/: definitions.json
Generator/ImplotGen/: ImplotGen.csproj  Program.cs
Generator/NativeLibraries/: CMakeLists.txt  build-native.cmd  build-native.ps1
Generator/NativeLibraries/extensions/: CMakeLists.txt
Generator/Test/: EvergineImGUITest.Windows.sln  EvergineImGUITest.weproj  README.md
Generator/Test/Content/: Scenes.wedir
Generator/Test/Content/Scenes/: MyScene.wescene  MyScene.wescene.wesc
Generator/Test/Content/Scenes/MyScene/Environment/: SceneReflectionProbe.werp
Generator/Test/Content/Scenes/MyScene/Environment/SceneReflectionProbe/: Irradiance.texdmp  Radiance.texdmp
Generator/Test/EvergineImGUITest/: EvergineImGUITest.csproj  MyApplication.cs  MyScene.cs
Generator/Test/EvergineImGUITest.Editor/: EvergineImGUITest.Editor.csproj  MyCustomClassEditor.cs
Generator/Test/EvergineImGUITest.Editor/Properties/: AssemblyInfo.cs
Generator/Test/EvergineImGUITest.Windows/: EvergineImGUITest.Windows.csproj  Program.cs
Generator/Test/EvergineImGUITest/Components/: ImguiDemo.cs  ImguizmoDemo.cs  ImnodesDemo.cs
Generator/Test/EvergineImGUITest/Managers/: ImGUIHelpers.cs  ImGuiManager.cs  Shaders.cs
Generator/Test/EvergineImGUITest/Properties/: AssemblyInfo.cs
Generator/native/: download-artifacts.py
Generator/native/osx-arm64/: cimgui.dylib  cimnodes.dylib
Generator/native/osx-x64/: cimgui.dylib
NativeLibraries/: CMakeLists.txt  build.py
NativeLibraries/extensions/: CMakeLists.txt
native/osx-arm64/: cimguizmo.dylib
native/osx-x64/: cimguizmo.dylib  cimnodes.dylib
scripts/: build-native.ps1  build-wasm-cimx-native.ps1  build-win-cimx-native.ps1  build_native.py  deploy-native.ps1  deploy-win-native.ps1  download-artifacts.py  generate-bindings.ps1  generate-bindings.py  generate-nugets.ps1  install_deps.ps1  ps_support.ps1  update-cimx.ps1  update-cimx.sh  verify-changes.ps1
